--- a/work/app/index.html
+++ b/work/app/index.html
@@ -32,6 +32,35 @@
 
 	<div class="container" id="quest">
 
+
+		<form action="" id="form1">
+
+			<fieldset>
+				<div>
+					<div>Вопрос 1</div>
+					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+						<label><input class="uk-radio" type="radio" value="yes" name="q1" required> Да</label>
+						<label><input class="uk-radio" type="radio" value="no" name="q1"> Нет</label>
+						<label><input class="uk-radio" type="radio" value="yn" name="q1"> Незнаю</label>
+					</div>
+				</div>
+				<div>
+					<div>Вопрос 2</div>
+					<div class="uk-margin uk-grid-small uk-child-width-auto uk-grid">
+						<label><input class="uk-radio" type="radio" value="yes" name="q2" required> Да</label>
+						<label><input class="uk-radio" type="radio" value="no" name="q2"> Нет</label>
+						<label><input class="uk-radio" type="radio" value="yn" name="q2"> Незнаю</label>
+					</div>
+				</div>
+			</fieldset>
+
+			<div class="sub">proverka</div>
+			
+			<button type="submit">_</button>
+
+		</form>
+
+
 		<div class="block block-a">
 			<h4>БЛОК А</h4>
 			<div>
