--- a/work/app/index.html
+++ b/work/app/index.html
@@ -111,7 +111,7 @@
 						Анкета оцінки ризику онкопатології
 					</h2>
 
-					<form class="uk-form-stacked" id="fanketa">
+					<form class="uk-form-stacked uk-switcher" id="fanketa" uk-switcher>
 				
 						<fieldset class="uk-fieldset block-a novalid block-acti1ve">
 							<legend>Блок А</legend>
