--- a/work/app/index.html
+++ b/work/app/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>BRCA1,2</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -120,7 +120,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="aq1" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="aq1" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="aq1" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="aq1" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -128,7 +128,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="aq2" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="aq2" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="aq2" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="aq2" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -138,7 +138,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="aq3" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="aq3" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="aq3" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="aq3" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -146,7 +146,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="aq4" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="aq4" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="aq4" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="aq4" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -154,7 +154,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="aq5" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="aq5" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="aq5" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="aq5" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 		
@@ -170,7 +170,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq1" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq1" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq1" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq1" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -179,7 +179,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq2" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq2" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq2" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq2" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -189,7 +189,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq3" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq3" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq3" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq3" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -199,7 +199,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq4" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq4" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq4" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq4" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -209,7 +209,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq5" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq5" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq5" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq5" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -219,7 +219,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="bq6" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="bq6" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="bq6" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="bq6" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 						
@@ -237,7 +237,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="cq1" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="cq1" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="cq1" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="cq1" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -247,7 +247,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="cq2" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="cq2" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="cq2" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="cq2" value="ysn"> Не знаю</label>
 								</div>
 							</div>
 							<div class="uk-margin">
@@ -258,7 +258,7 @@
 								<div class="uk-form-controls">
 									<label><input class="uk-radio" type="radio" name="cq3" value="yes" required> Да</label>
 									<label><input class="uk-radio" type="radio" name="cq3" value="no"> Нет</label>
-									<label><input class="uk-radio" type="radio" name="cq3" value="ysn"> Незнаю</label>
+									<label><input class="uk-radio" type="radio" name="cq3" value="ysn"> Не знаю</label>
 								</div>
 							</div>	
 						
@@ -408,10 +408,10 @@
 				<div>
 
 					<div class="uk-switcher c-switcher">
-						<div style="background-image: url('//isida.com.ua/media/cache/ca/70/ca7065ee14e4713caf65f658299b07b2.jpg');"></div>
-						<div style="background-image: url('//isida.com.ua/media/cache/ba/80/ba80c210f2dc82282cbd4fa09e591dab.jpg');"></div>
-						<div style="background-image: url('//isida.com.ua/media/cache/ae/c6/aec6c2688675d506953c3a2bf8481b7a.jpg');"></div>
-						<div style="background-image: url('//isida.com.ua/media/cache/88/b8/88b854c9186a35fe99250db27ae6d9a6.jpg');"></div>
+						<div style="background-image: url('./img/ca7065ee14e4713caf65f658299b07b2.jpg');"></div>
+						<div style="background-image: url('./img/ba80c210f2dc82282cbd4fa09e591dab.jpg');"></div>
+						<div style="background-image: url('./img/aec6c2688675d506953c3a2bf8481b7a.jpg');"></div>
+						<div style="background-image: url('./img/88b854c9186a35fe99250db27ae6d9a6.jpg');"></div>
 					</div>
 
 				</div>
@@ -425,7 +425,7 @@
 		<div class="uk-container">
 			<div class="footer-box">
 				<div class="footer-logo">
-					<a href="#"><img src="//isida.com.ua/static/images/FootLogo.png" alt=""></a>
+					<a href="#"><img src="./img/FootLogo.png" alt=""></a>
 				</div>
 				<div class="footer-name">
 					© ООО «Исида-IVF», 2004–2019
