--- a/work/app/index.html
+++ b/work/app/index.html
@@ -93,9 +93,13 @@
 					Наличие информации о мутации (есть ли она наследственной) дает возможность прогнозировать
 будущий риск заболевания и определить стратегию медицинского сопровождения пациента.
 Составление семейного и личного анамнеза пациента - один из важных этапов перед
-проведением генетического тестирования. Если Вы хотите получить консультацию генетика и
-пройти тестирование на мутацию генов - просьба заполнить и отправить анкету.
+проведением генетического тестирования.
 				</p>
+
+				<p><strong>
+						Если Вы хотите получить консультацию генетика и
+						пройти тестирование на мутацию генов - просьба заполнить и отправить анкету.
+				</strong></p>
 				
 			</div>
 		</div>
