--- a/work/app/index.html
+++ b/work/app/index.html
@@ -442,10 +442,10 @@
 
 	
 
-	<link rel="stylesheet" href="css/main.min.css">
+	<link rel="stylesheet" href="./css/main.min.css?v=1">
 	
 
-	<script src="js/scripts.min.js"></script>
+	<script src="./js/scripts.min.js?v=1"></script>
 	
 
 </body>
